--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "graphiql-explorer-example",
-  "homepage": "https://onegraph.github.io/graphiql-explorer-example",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "PUBLIC_URL=/graphiql react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "flow": "flow",
